[gd_scene load_steps=3 format=3 uid="uid://curec8xoswwie"]

[ext_resource type="Script" uid="uid://dfw26atawaaq6" path="res://scripts/character_selection.gd" id="1_q54je"]
[ext_resource type="PackedScene" uid="uid://fvvkt48a13xs" path="res://scenes/deck_display_better.tscn" id="2_dd54q"]

[node name="CharacterSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q54je")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.439667, 0.68639, 0.677094, 1)

[node name="WitchButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 400.0
offset_right = 240.0
offset_bottom = 440.0
scale = Vector2(2, 2)

[node name="Label" type="Label" parent="WitchButton"]
layout_mode = 0
offset_top = 50.0
offset_right = 44.0
offset_bottom = 73.0
text = "Witch"

[node name="WitchDeckDisplay" parent="." instance=ExtResource("2_dd54q")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="WizardButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 800.0
offset_top = 400.0
offset_right = 840.0
offset_bottom = 440.0
scale = Vector2(2, 2)

[node name="Label" type="Label" parent="WizardButton"]
layout_mode = 0
offset_top = 50.0
offset_right = 54.0
offset_bottom = 73.0
text = "Wizard"

[node name="WizardDeckDisplay" parent="." instance=ExtResource("2_dd54q")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 750.0
offset_right = 750.0
grow_horizontal = 1
grow_vertical = 1

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="SelectSound" type="AudioStreamPlayer" parent="."]

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_right = 70.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Select a Character"
